<resources>
    <string name="app_name">芯烨市场</string>

    <string name="title_section1">推荐</string>
    <string name="title_section2">管理</string>
    <string name="title_section3">设置</string>

    <string name="title_start_page">启动页</string>
    <string name="title_pictures">酷图</string>

    <string name="loading">正在加载...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ui_language">界面语言：</string>
    <string name="app_size">应用大小：</string>
    <string name="support_rom">支持ROM：</string>
    <string name="update_time">更新日期：</string>
    <string name="str_app_remark_hint">点评：</string>

    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="open">打开</string>

    <string name="tab_all_apk">所有</string>
    <string name="tab_type">分类</string>

    <string name="tab_install">已安装</string>
    <string name="tab_download">下载</string>
    <string name="tab_update">更新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
