<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <include
        android:id="@+id/app_header"
        layout="@layout/view_app_header"
        android:layout_width="match_parent"
        android:layout_height="76dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/app_view_screenshot0"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/app_view_screenshot1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/app_view_screenshot2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/app_view_screenshot3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/app_view_screenshot4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/app_view_screenshot5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone" />
                    </LinearLayout>
                </HorizontalScrollView>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/app_view_meta1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="13sp"
                    android:text="@string/ui_language"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/app_view_meta2"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"/>

                <TextView
                    android:id="@+id/app_view_meta2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="13sp"
                    android:text="@string/app_size"
                    app:layout_constraintLeft_toLeftOf="@id/guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"/>

                <TextView
                    android:id="@+id/app_view_meta3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="13sp"
                    android:text="@string/support_rom"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/app_view_meta4"
                    app:layout_constraintTop_toBottomOf="@+id/app_view_meta1"/>

                <TextView
                    android:id="@+id/app_view_meta4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="13sp"
                    android:text="@string/update_time"
                    app:layout_constraintLeft_toLeftOf="@id/guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_view_meta2" />

                <TextView
                    android:id="@+id/app_view_remark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_text_remark"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/str_app_remark_hint"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_view_meta3" />

                <TextView
                    android:id="@+id/app_view_introduce"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text=""
                    android:textColorLink="@color/link_text_color"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_view_remark" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>